Fix mash shelf id mapping and removal.

Add ShelfID to app_id mapping, to complement the inverse map.
(these are 1-to-1 mappings, but two maps eases usage)

Remove mappings when shelf items are removed.
Implement the ShelfDelegate interface mapping functions.

TODO: Add unit/shell testing of ShelfDelegateMus.

BUG=607271
TEST=|ShelfDelegaeMus::app_id_to_shelf_id_| shrinks as appropriate.
R=sadrul@chromium.org,sky@chromium.org

Review-Url: https://codereview.chromium.org/1932503002
Cr-Commit-Position: refs/heads/master@{#390289}

Former-commit-id: 4875d4b179e246bdc4a903bc3d20c831727eecca